my first commit

--- a/OneDrive/Desktop/Per Scholas C lass/Final Project/Project four/contact.html
+++ b/OneDrive/Desktop/Per Scholas C lass/Final Project/Project four/contact.html
@@ -8,17 +8,14 @@
   <meta name="keywords" name="hotel, noida hotel, luxurious hotels in noida">
   <script src="https://kit.fontawesome.com/e7783e5772.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="./CSS/contact.css">
-  <!-- <link rel="stylesheet" media="screen and (max-width: 769px)" 
-  href="./mobile.css"> -->
-  <title>Kuriftu Resort  | Contact</title>  
+
+  <title>Awasa Resort  | Contact</title>  
 </head>
 <body>
   <header>
-
-
-    
+   
         <div class="logo">
-            <p> TKuriftu Resort </p>
+            <p> Awasa Resort </p>
         </div>
         <nav>
             <ul>
@@ -29,26 +26,13 @@
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
-  
-
- 
-  <!-- <nav id="navbar">
-    <div class="container">
-  <h1 class="logo"><a href="Index.html">AR</a></h1>
-  <ul>
-    <li><a href="Index.html">Home</a></li>
-    <li><a href="About.html">About</a></li>
-    <li><a class="current" href="Contact.html">Contact</a></li>
-  </ul>
-</div>
-</nav> -->
 </header>
   <section id="contact-form" class= "py-3">
     <div class="container">
       <h1 class="l-heading">
         <span class="text-primary">Contact</span> Us</h1>
   <p>Please fill out the form below to contact us</p>
-  <!-- <form action="process.php"> -->
+
     <div class="form-group">
     <label for="name">Name</label>
       <input type="text" name="name" id="name">
@@ -68,27 +52,6 @@
     </div>
  
   
-  <!-- <section id="contact-info" class="bg-dark">
-    <div class="container">
-    <div class="box">
-      <i class="fas fa-hotel fa-3x"></i>
-      <h3>Location</h3>
-      <p>Sector 62, Noida (U.P.)</p>
-    </div>
-    <div class="box">
-      <i class="fas fa-phone fa-3x"></i>
-      <h3>Phone Number</h3>
-      <p>(91)-8888-8888</p>
-      </div>
-    <div class="box">
-      <i class="fas fa-envelope fa-3x"></i>
-      <h3>Email Address</h3>
-      <p>ARhotel@lux.co</p>
-      </div>
-    </div>
-  </section> -->
-  <!-- <footer id="main-footer">
-    Hotel AR &copy; 2020, All Rights Reserved  -->
-  </footer> 
+  
 </body>
-</html> -->
+</html> 
